--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -33,3 +33,10 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-size: large;
+}
